--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <div id="quote">
       <span></span>
     </div>
-
+    <img src="" alt="" />
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/backgroundimg.js"></script>
   </body>
 </html>
