--- a/index.html
+++ b/index.html
@@ -7,21 +7,39 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Momentum App</title>
   </head>
+
   <body>
+    <!-- befor login -->
     <form id="login-form" class="hidden">
       <input required maxlength="15" type="text" placeholder="ID" />
       <input type="submit" value="Log In" />
     </form>
 
+    <!-- after login -->
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00:00</h2>
+
+    <!-- to-do list -->
+    <form id="todo-form">
+      <input
+        required
+        type="text "
+        placeholder="Write a To Do and Press Enter"
+      />
+    </form>
+    <ul id="todo-list"></ul>
+
+    <!-- random wise saying -->
     <div id="quote">
       <span></span>
     </div>
     <img src="" alt="" />
+
+    <!-- js script -->
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/backgroundimg.js"></script>
+    <script src="js/todo.js"></script>
   </body>
 </html>
