--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <!-- after login -->
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00:00</h2>
-
     <!-- to-do list -->
     <form id="todo-form">
       <input
@@ -32,14 +31,22 @@
     <!-- random wise saying -->
     <div id="quote">
       <span></span>
+      <span></span>
     </div>
-    <img src="" alt="" />
 
+    <img src="" alt="" />
+    
+    <!-- weather -->
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
     <!-- js script -->
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/backgroundimg.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
